--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore JavaScript and Yarn related files
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+# Ignore .env file containing credentials.
+.env*
