--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,18 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore JavaScript and Yarn related files
-/node_modules
+# Ignore Yarn related files
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
 
 # Ignore .env file containing credentials.
 .env*
+
+# Vite Ruby
+/public/vite*
+node_modules
+# Vite uses dotenv and suggests to ignore local-only env files. See
+# https://vitejs.dev/guide/env-and-mode.html#env-files
+*.local
+
