--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "vite": "^4.3.0",
+    "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-ruby": "^3.2.0"
   },
   "name": "app",
