Installing Turbo & Stimulus

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "private": "true",
   "description": "Ruby on Rails 7 and Vite",
   "main": "index.js",
-  "author": "Karl Keller <kgk86@hotmail.com>"
+  "author": "Karl Keller <kgk86@hotmail.com>",
+  "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^7.3.0"
+  }
 }
