--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "vite": "^4.3.0",
     "vite-plugin-full-reload": "^1.0.5",
-    "vite-plugin-ruby": "^3.2.0"
+    "vite-plugin-ruby": "^3.2.0",
+    "vite-plugin-stimulus-hmr": "^3.0.0"
   },
   "name": "app",
   "private": "true",
